devops/kubernetes/overlays/test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: nvr-test
  labels:
    app: nvr
    environment: test
