devops/kubernetes/overlays/test/patch-plate-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plate-service
spec:
  replicas: 1
