devops/kubernetes/overlays/test/patch-vehicle-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vehicle-service
spec:
  replicas: 1
